force-app/main/default/objects/Gong_Processing_Run__c/Gong_Processing_Run__c.object-meta.xml
<CustomObject>
    <description>Tracks each execution of the Gong email processing batch job</description>
    <label>Gong Processing Run</label>
    <nameField>
        <displayFormat>RUN-{00000}</displayFormat>
        <label>Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gong Processing Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>