force-app/main/default/objects/Gong_Processing_Run__c/fields/AI_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>AI_Job_Id__c</fullName>
    <label>AI Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>