force-app/main/default/objects/Gong_Processing_Run__c/fields/Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Id__c</fullName>
    <label>Batch Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>