force-app/main/default/objects/Gong_Processing_Run__c/fields/Free_Email_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Free_Email_Excluded__c</fullName>
    <label>Free Email Excluded</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>