force-app/main/default/objects/Gong_Processing_Run__c/fields/Invalid_Email_Count__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Email_Count__c</fullName>
    <label>Invalid Email Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>