force-app/main/default/objects/Gong_Processing_Run__c/fields/Link_To_Lead_Proposed__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Lead_Proposed__c</fullName>
    <label>Link To Lead Proposed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>