force-app/main/default/objects/Gong_Processing_Run__c/fields/New_Contacts_Proposed__c.field-meta.xml
<CustomField>
    <fullName>New_Contacts_Proposed__c</fullName>
    <label>New Contacts Proposed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>