force-app/main/default/objects/Gong_Processing_Run__c/fields/Total_Activities_Processed__c.field-meta.xml
<CustomField>
    <fullName>Total_Activities_Processed__c</fullName>
    <label>Total Activities Processed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>