force-app/main/default/objects/Gong_Processing_Run__c/listViews/All_Runs.listView-meta.xml
<ListView>
    <fullName>All_Runs</fullName>
    <columns>NAME</columns>
    <columns>Run_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Activities_Processed__c</columns>
    <columns>New_Contacts_Proposed__c</columns>
    <columns>Link_To_Contact_Proposed__c</columns>
    <columns>Link_To_Lead_Proposed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Runs</label>
</ListView>