force-app/main/default/objects/Gong_Processing_Run__c/listViews/Failed_Runs.listView-meta.xml
<ListView>
    <fullName>Failed_Runs</fullName>
    <columns>NAME</columns>
    <columns>Run_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Batch_Job_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed Runs</label>
</ListView>